--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+filelock==3.18.0
+fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
@@ -12,7 +14,9 @@ Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
+mpmath==1.3.0
 narwhals==1.35.0
+networkx==3.4.2
 numpy==2.2.5
 packaging==24.2
 pandas==2.2.3
@@ -28,8 +32,11 @@ rpds-py==0.24.0
 six==1.17.0
 smmap==5.0.2
 streamlit==1.44.1
+sympy==1.13.1
 tenacity==9.1.2
 toml==0.10.2
+torch==2.6.0
+torchvision==0.21.0
 tornado==6.4.2
 typing_extensions==4.13.2
 tzdata==2025.2
