--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pillow==11.2.1
 protobuf==5.29.4
 pyarrow==19.0.1
 pydeck==0.9.1
+pydicom==3.0.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.36.2
